# aqdef-reader

./: .gitignore  README.md  codeql-analysis.yml  requirements.txt  setup.cfg  setup.py
.github/: workflows
.github/workflows/: codeql-analysis.yml  codeql.yml  deploy.yml  deploy_conda.yml  deploy_pypi.yml  main.yml
aqdefreader/: __init__.py  characteristic.py  file.py  measurement.py  operations.py  part.py
aqdefreader/tests/: __init__.py  test_characteristics.py  test_file.py  test_measurements.py  test_operations.py  test_operations_dfq.py  test_parts.py  testdata.py  testmeasures.dfq
conda/: meta.yaml
qdasreader/: __init__.py  attribute.py  file.py  measurement.py  operations.py  part.py
qdasreader/tests/: __init__.py  test_attribute.py
