[metadata]
name = qdasreader
version = 0.9
author = successfactory
author_email = office@successfactory.cc
description = A reader for Q-DAS ASCII files into Python structures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/successfactory/qdas-reader
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6